fix line align footer

--- a/public/new_registration/src/webapp/components/footer/footer.module.css
+++ b/public/new_registration/src/webapp/components/footer/footer.module.css
@@ -71,4 +71,8 @@
     .border {
         margin: 0 0 0 33px;   
     }
+
+    .logo_container {
+        height: 73px;
+    }
 }
